fix: adjust font sizes on smaller screens to remedy overflow

--- a/src/containers/HomeView/About/About.module.scss
+++ b/src/containers/HomeView/About/About.module.scss
@@ -139,9 +139,8 @@
 
 .TestimonialsCardSubTitle {
   composes: subtitle from global;
-  text-align: center;
-  font-size: 14px;
   display: inline-block;
+  text-align: center;
   width: 100%;
 }
 
